<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:id="@+id/txtNodeAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/node_address"/>
    <EditText
        android:id="@+id/inputNodeAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"/>

    <TextView
        android:id="@+id/txtNodePortTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/node_port"/>
    <EditText
        android:id="@+id/inputNodePort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <!--<TextView
        android:id="@+id/txtNodeTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/node_type"/>
    <Spinner
        android:id="@+id/spinnerNodeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->

    <TextView
        android:id="@+id/txtLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/node_location"/>
    <TextView
        android:id="@+id/txtCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnChooseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/select_node_location"/>


</LinearLayout>
