<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNetworkRuleInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_rule_info"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/txtWifiCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_should_wifi"
                android:layout_centerVertical="true"/>
            <CheckBox
                android:id="@+id/checkboxWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layoutSsid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/txtWifiSsid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_wifi_ssid"/>
            <EditText
                android:id="@+id/inputWifiSsid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtWifiSsid"
                android:inputType="text"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/txtMobileCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/info_should_mobile"/>
            <CheckBox
                android:id="@+id/checkboxMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layoutMobileFast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/txtMobileFastSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_should_mobile_fast"/>
            <Spinner
                android:id="@+id/spinnerMobileType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/txtMobileFastSelect"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>